# AIRecorder

./: .gitattributes  .gitignore  README.md
backend/: .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  devices.py  recordings.py  router.py  settings.py
backend/app/core/: config.py  settings_manager.py
backend/app/schemas/: recording.py  settings.py
backend/app/services/: asr_service.py  audio_mixer.py  audio_writer.py  diarization.py  llm.py  pipeline.py  recorder.py  repository.py  zipformer.py
backend/app/services/punctuation/: __init__.py  gec_model.py  gec_utils.py  restorer.py  service.py  vocabulary.py
backend/app/services/readers/: wav_reader.py
backend/app/services/sources/: base.py  microphone.py  system_audio.py
backend/app/utils/: device_filter.py  wav_utils.py
backend/tests/: test_api_e2e.py  test_backend_e2e.py  test_gemini_fake_key.py  test_pipeline_errors.py  test_upload_endpoint.py
docs/: api.md  architecture.md  demo_guide.md  features.md  roadmap.md  testing.md
frontend/: README.md  eslint.config.mjs  package-lock.json  package.json
frontend/src/main/: index.ts
frontend/src/preload/: index.ts
frontend/src/renderer/: index.html
frontend/src/renderer/src/: App.tsx  electron.d.ts  main.tsx
frontend/src/renderer/src/api/: client.ts
frontend/src/renderer/src/constants/: index.ts
frontend/src/renderer/src/hooks/: useAudioPlayer.ts  useDeleteRecording.ts  usePanelResize.ts  usePauseRecording.ts  useResumeRecording.ts  useStartRecording.ts  useStopRecording.ts  useSummarize.ts  (+1 more)
(+38 files in other folders)
