[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.139.0",
    "google-genai>=2.10.0",
    "numpy>=2.5.1",
    "pyaudiowpatch>=0.2.12.8",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sounddevice>=0.5.5",
    "uvicorn>=0.50.2",
    "sherpa-onnx>=1.10.45",
    "onnxruntime>=1.20.0",
    "transformers>=4.48.0",
    "openai>=2.45.0",
    "anthropic>=0.116.0",
    "huggingface-hub>=1.23.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "httpx>=0.28.0",
    "psutil>=7.2.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
